@@ -3,6 +3,11 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-14-10 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
+  * Updated Italian Language file
+  * RotateSelectedItemTool shows rotation center as point shape
+    if this has been set (shift option)
+
 2016-12-10 mmichaud <m.michael.michaud@orange.fr>
   * Sort the list of SRS in WMS layer SRS chooser + fix some I18N
 
